oxiplate/tests/crates/unreachable/tests/broken/invalid-escaper-extension.stderr
error: proc-macro derive panicked
 --> tests/broken/invalid-escaper-extension.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = help: message: internal error: entered unreachable code: Unregistered file extensions are fine, `None` should be returned instead

error[E0599]: no method named `render` found for struct `Data` in the current scope
 --> tests/broken/invalid-escaper-extension.rs:8:10
  |
5 | struct Data;
  | ----------- method `render` not found for this struct
...
8 |     Data.render().unwrap();
  |          ^^^^^^ method not found in `Data`
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `render`, perhaps you need to implement it:
          candidate #1: `Render`
